--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # MongoDB Atlas Configuration
-MONGO_USER=manh
-MONGO_PASS=ok123
-MONGO_HOST=cluster0.nr0g1s5.mongodb.net
+MONGO_USER=manhblue
+MONGO_PASS=manhmit1234
+MONGO_HOST=hasaki-cluster0.yqbynry.mongodb.net
 MONGO_DB=hasakidb
 MONGO_COLLECTION=products_detail
