--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,5 @@
-# MongoDB Atlas Configuration
-MONGO_USER=manhblue
-MONGO_PASS=manhmit1234
-MONGO_HOST=hasaki-cluster0.yqbynry.mongodb.net
-MONGO_DB=hasakidb
-MONGO_COLLECTION=products_detail
+MONGO_USER=your_username
+MONGO_PASS=your_password
+MONGO_HOST=your_cluster.mongodb.net
+MONGO_DB=your_database_name
+MONGO_COLLECTION=your_collection_name
